<?xml version="1.0"?>
<package format="2">
  <name>camera_driver_gige</name>
  <version>0.0.0</version>
  <description>The camera_driver_gige package</description>

  <maintainer email="ammar@todo.todo">ammar</maintainer>
  <license>TODO</license>

  <depend>camera_info_manager_py</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
